prevent page bouncing on mobile

--- a/server/web-content/styles.css
+++ b/server/web-content/styles.css
@@ -7,6 +7,7 @@ body {
     display: flex;
     justify-content: center;
     color: #2d2d2d;
+    touch-action: none;
 }
 
 ul {
